--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,27 @@
     <groupId>ru.spbau.mit</groupId>
     <artifactId>java-hw</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <dependencies>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.9</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/commons-codec-1.9.jar</systemPath>
+        </dependency>
+
+    </dependencies>
+
+
+
     <build>
         <plugins>
             <plugin>
