refactoring for less coupling between classes

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
             <systemPath>${project.basedir}/src/main/resources/commons-codec-1.9.jar</systemPath>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+
     </dependencies>
 
 
